# dispatch

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: check.yml  release.yml
backend/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 0001_users.sql  0002_messages.sql
backend/src/: authrequest.rs  channel.rs  channelmessage.rs  context.rs  endpoints.rs  main.rs  response.rs  userconnection.rs
client/: .env  Cargo.toml
client/src/: authrequest.rs  channelmessage.rs  main.rs  websocket.rs
frontend/: Cargo.toml  README.md
frontend/src/: customviews.rs  main.rs
server/: Cargo.toml
server/src/: authrequest.rs  channel.rs  channelmessage.rs  connection.rs  context.rs  endpoints.rs  main.rs  pool.rs  response.rs  userconnection.rs
