[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24.0" }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
chrono = "0.4.38"
dotenv = "0.15.0"
jwt-simple = "0.12.11"
