[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
serde.workspace = true
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
serde_json = "1.0.133"
anyhow.workspace = true
chrono.workspace = true
jwt-simple = "0.12.11"
