[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = { version = "0.21.1", features = ["ansi"] }
futures-util = "0.3.31"
ureq = { version = "2.12.1", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
cursive_core = "0.4.6"
crossterm = "0.28.1"
anyhow = "1.0.94"
chrono = "0.4.39"
