[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
cursive = { version = "0.21.1", features = ["ansi"] }
tokio.workspace = true
ureq = { version = "2.12.1", features = ["json"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
cursive_core = "0.4.6"
crossterm = "0.28.1"
anyhow.workspace = true
chrono.workspace = true
argh = "0.1.13"
