[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
rustls = { version = "0.23.17", features = ["ring"] }
tokio-rustls = "0.26.0"
argh = "0.1.12"
serde_json = "1.0.133"
